--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="datums">Datums</string>
     <string name="avots">Avots</string>
     <string name="pievienot">Pievienot</string>
+    <string name="izlogoties">Izlogoties</string>
 </resources>
