Extra thing - base for visualization

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="app_name7">Ienākuma pievienošana</string>
     <string name="app_name8">Ienākumi / Izdevumi</string>
     <string name="app_name9">Budžeta pārskats</string>
+    <string name="app_name10">Datu vizualizācija</string>
     <string name="ielogoties">Ielogoties</string>
     <string name="e_pasts">E-pasts</string>
     <string name="parole">Parole</string>
